# GMediaDB

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  authors.txt  autogen.sh  configure  configure.ac
data/: Makefile.am  Makefile.in  gmediadb-1.0.pc.in
dbus-server/: Makefile.am  gmediadb.c  gmediadb.h  gmediadb.xml  media-object.c  media-object.h  media-object.xml
debian/: changelog  control  copyright  gmediadb-dev.install  gmediadb.install  rules
gmediadb/: Makefile.am  gmediadb.c  gmediadb.h  gmediadb.pc.in  libgmediadb.c  libgmediadb.h
python/: Makefile  Makefile.am  gmediadb-GMediaDB.c  gmediadb-GMediaDB.h  gmediadb-python.c  setup.py
src/: Makefile.am  Makefile.in  gmediadb-util.c  gmediadb.c  gmediadb.h  gmediadb.pc.in  media-object.c  media-object.h  media-object.xml  tag-handler.c  tag-handler.h
trunk/: Makefile.in  configure
trunk/data/: Makefile.am  gmediadb.service.in
trunk/src/: Makefile.am  gmediadb-util.c  gmediadb.c  gmediadb.h  media-object.c  media-object.xml  tag-handler.h
